# vim-typist

./: README.md  package-lock.json  package.json  pyproject.toml  rplugin-package.json  tsconfig.json
plugin/: vim-typist.vim
python/: plugin.py
src/: index.ts  model.py
