[tool.poetry]
name = "vim-typist"
version = "0.1.0"
description = "vim plugin to help improve typing"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
jedi-language-server = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
